--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "pg" : "7.7.1",
     "redis" : "2.8.0",
     "nodemon" : "1.18.9",
-    "cors"  : "2.8.5"
+    "cors"  : "2.8.5",
+    "body-parser" : "1.18.3"
   },
   "scripts" : {
     "start" : "node index.js",
