--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,11 @@ services:
       context: ./client
     volumes:
       - /app/node_modules
-      - .client:/app
+      - ./client:/app
   worker:
     build:
       dockerfile: Dockerfile.dev
       context: ./worker
     volumes:
       - /app/node_modules
-      - .worker:/app
+      - ./worker:/app
