--- a/worker/package.json
+++ b/worker/package.json
@@ -1,10 +1,16 @@
 {
-  "dependencies"  : {
-    "nodemon" : "1.18.9",
-    "redis" : "2.8.0"
+  "dependencies": {
+    "nodemon": "1.18.9",
+    "redis": "2.8.0"
   },
-  "scripts" : {
-    "start" :  "node index.js",
-    "dev" : "nodemon"
-  }
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon"
+  },
+  "name": "worker",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
