--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
-  "dependencies" : {
-    "express" : "4.16.4",
-    "pg" : "7.7.1",
-    "redis" : "2.8.0",
-    "nodemon" : "1.18.9",
-    "cors"  : "2.8.5",
-    "body-parser" : "1.18.3"
+  "dependencies": {
+    "express": "4.16.3",
+    "pg": "7.4.3",
+    "redis": "2.8.0",
+    "cors": "2.8.4",
+    "nodemon": "1.18.3",
+    "body-parser": "*"
   },
-  "scripts" : {
-    "start" : "node index.js",
-    "dev" : "nodemon"
+  "scripts": {
+    "dev": "nodemon",
+    "start": "node index.js"
   }
 }
