Used LTS node image for react docker as test cases work with LTS node version 10.15.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-# fixing node version as node 11.11 is failing test cases on travis CI
-language: node_js
-node_js:
-  - "10.15.3"
+# fixing node version as node 11.11 is failing test cases on travis CI(Commented as node version is set with the docker image)
+#language: node_js
+#node_js:
+#  - "10.15.3"
 
 sudo: required
 services:
