--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,16 @@ after_success:
   - docker push danielpremkumar/multi-nginx
   - docker push danielpremkumar/multi-api
   - docker push danielpremkumar/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-268161157189
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
